add: 上传测试文件

--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,9 +1,11 @@
 # 使用官方的 Nginx 镜像作为基础镜像
 FROM node:18-alpine
 
+WORKDIR /opt/oa-api
+
 COPY ./ /opt/oa-api
 
-WORKDIR /opt/oa-api
+RUN ls
 
 RUN npm install --registry=https://registry.npm.taobao.org
 
