--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Node.js CI
 
 on:
@@ -22,15 +19,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [10]
+        node-version: [16, 18, 20]   # ✅ 同时测试 Node.js 16 / 18 / 20
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - name: Checkout Git Source
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3   # ✅ 最新版
 
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3   # ✅ 最新版
       with:
         node-version: ${{ matrix.node-version }}
 
@@ -41,6 +38,6 @@ jobs:
       run: npm run ci
 
     - name: Code Coverage
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3   # ✅ 最新版
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
