add : 新增仓库管理接口

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,4 +1,10 @@
 {
+  "compilerOptions": {
+    "types": []
+  },
+  "typeAcquisition": {
+    "enable": false
+  },
   "include": [
     "**/*"
   ]
